[B]1.0.7[/B] (2016-10-09)

- Fix scrapper

[B]1.0.6[/B] (2016-03-11)

- Fix scrapper

[B]1.0.5[/B] (2016-01-15)

- Fix dependencies
- Back to list view in courses

[B]1.0.4[/B] (2015-12-04)

- Fix videos count
- Enabled thumbnails for courses

[B]1.0.3[/B] (2015-11-26)

- Fix scrapper

[B]1.0.2[/B] (2015-03-19)

- Migrated to xbmcswift2
- Fix scrapper

[B]1.0.1[/B] (2014-11-14)

- Fix server url

[B]1.0.0[/B] (2014-01-27)

- First release