@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.codigofacilito.com" version="1.0.7" name="CodigoFacilito.com" provider-name="BuNKeR (@ezeescobar)">
+<addon id="plugin.video.codigofacilito.com" version="1.0.8" name="CodigoFacilito.com" provider-name="BuNKeR (@ezeescobar)">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="plugin.video.youtube" version="4.4.10" />
     <import addon="script.module.xbmcswift2" version="2.4.0"/>
+    <import addon="script.module.beautifulsoup4" version="4.3.1"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="addon.py">
     <provides>video</provides>
