@@ -4,4 +4,5 @@
     <string id="30002">Server unavailable</string>
     <string id="30003">Courses are not available</string>
     <string id="30004">Videos in this course are not available</string>
+    <string id="30005">Categoires are not available</string>
 </strings>
