@@ -4,4 +4,5 @@
     <string id="30002">Servidor no disponible</string>
     <string id="30003">Los cursos no estan disponibles</string>
     <string id="30004">Los videos de este curso no estan disponibles</string>
+    <string id="30005">Las categorias no estan disponibles</string>
 </strings>
